--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -179,6 +179,7 @@ input, select, textarea {
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.5em 0;
+		text-shadow: 2px 2px 5px #000000;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -2996,7 +2997,7 @@ input, select, textarea {
 		-webkit-flex-direction: row;
 		-ms-flex-direction: row;
 		flex-direction: row;
-		min-height: 22.5em;
+		min-height: 20 em;
 	}
 
 		body.is-ie .spotlights > section {
@@ -3034,7 +3035,8 @@ input, select, textarea {
 			}
 
 		.spotlights > section > .content {
-			padding: 4em 5em 2em 5em ;
+
+			padding: 1.5em 2em 1em 3em ;
 			display: -moz-flex;
 			display: -webkit-flex;
 			display: -ms-flex;
@@ -3248,7 +3250,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style2 {
-			background-color: #552966;
+			background-color: #151249;
 		}
 
 		.wrapper.style2-alt {
@@ -3524,7 +3526,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #070d2d;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3874,7 +3876,7 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/intro.svg");
+		background-image: url("images/bg.jpeg");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
@@ -3882,6 +3884,7 @@ input, select, textarea {
 
 		#intro p {
 			font-size: 1.25em;
+			text-shadow: 1px 1px 3px #000000;
 		}
 
 			@media screen and (max-width: 980px) {
