--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3242,7 +3242,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #382a54;
+			background-color: #395273;
 		}
 
 		.wrapper.style1-alt {
@@ -3250,7 +3250,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style2 {
-			background-color: #151249;
+			background-color: #30596B;
 		}
 
 		.wrapper.style2-alt {
@@ -3258,7 +3258,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #662956;
+			background-color: #3E738A;
 		}
 
 		.wrapper.style3-alt {
