--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3924,8 +3924,8 @@ input, select, textarea {
 	width: 100%;
 	height: 100vh;
 	font-family: "Exo", sans-serif;
-	color: ##f1f1f1;
-	linear-gradient(-231deg, #96D9D9, #5EBFBF, #499CA6, #1F6A73, #0C3640);
+	color: #f1f1f1;
+	background: linear-gradient(-231deg, #96D9D9, #5EBFBF, #499CA6, #1F6A73, #0C3640);
 	background-size: 400% 400%;
 	animation: gradientBG 10s ease infinite;
 	}
